hoan thien bai test