@@ -1,7 +1,9 @@
 package burundi.ilucky.service;
 
 import java.util.Arrays;
+import java.util.List;
 
+import burundi.ilucky.model.CustomUserDetails;
 import jakarta.transaction.Transactional;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,32 +18,37 @@ import org.springframework.stereotype.Service;
 import burundi.ilucky.repository.UserRepository;
 
 @Service
-public class UserDetailsServiceImpl implements UserDetailsService{
+public class UserDetailsServiceImpl implements UserDetailsService {
 
-	@Autowired
+    @Autowired
     private UserRepository userRepository;
-	
-	@Override
-	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-		burundi.ilucky.model.User user = userRepository.findByUsername(username);
+
+    public UserDetailsServiceImpl(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
+
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        burundi.ilucky.model.User user = userRepository.findByUsername(username);
         if (user == null) {
             throw new UsernameNotFoundException(username);
         }
-        
+
         GrantedAuthority grantedAuthority = new SimpleGrantedAuthority("ROLE_USER");
-        UserDetails userDetails = new User(user.getUsername(), user.getPassword(), Arrays.asList(grantedAuthority));
-		return userDetails;
-	}
-	
-	@Transactional
+//        return new User(user.getUsername(), user.getPassword(), List.of(grantedAuthority));
+        return new CustomUserDetails(user);
+    }
+
+    @Transactional
     public UserDetails loadUserById(Long id) {
-		burundi.ilucky.model.User user = userRepository.findById(id).orElseThrow(
+        burundi.ilucky.model.User user = userRepository.findById(id).orElseThrow(
                 () -> new UsernameNotFoundException("User not found with id : " + id)
         );
-		
+
         GrantedAuthority grantedAuthority = new SimpleGrantedAuthority("ROLE_USER");
-		UserDetails userDetails = new User(user.getUsername(), user.getPassword(), Arrays.asList(grantedAuthority));
-        return userDetails;
+        UserDetails userDetails = new User(user.getUsername(), user.getPassword(), Arrays.asList(grantedAuthority));
+//        return userDetails;
+        return new CustomUserDetails(user);
     }
 
 }
